--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@
 												<h3>PWA Core Hedged Equity</h3>
 												<p>The PWA Core Hedged Equity is specifically designed for investors looking to acquire enhanced capital appreciation, while mitigating systematic and non-systematic risk through the incorporation of engineered beta. This portfolio is composed of four separate strategies running simultaneously. Each strategy looks to integrate three distinct disciplines of investment analysis which include; fundamental, technical, and quantitative while incorporating a different brand of asset allocation; tactical and strategic. The core portion of this multi-disciplined strategy utilizes a diversified set of mutual funds, which track U.S and International equities and fixed-income securities. These mutual funds are strategically allocated and rebalanced every quarter, using macroeconomics and fundamental analysis, in an effort to reduce systematic risk and seeks to keep an allocation of 80/20, equity to fixed income. The second portion of this strategy incorporates a diversified set of stocks that are traded monthly based on different momentum and volatility indicators. This is done in an effort to reduce both systematic and non-systematic risk as this portion of the portfolio strictly integrates specific sectors, industries or asset classes that display momentum and strong outperformance relative to the benchmark. To further protect the principal invested, this portion will go to a 50% cash allocation in the event that the market signals an upcoming bearish quarter.  The third part of this portfolio incorporates a long-short equity strategy, which integrates tactical asset allocation using technical analysis. This strategy aims to add alpha to the overall portfolio, as well as provide a hedge through the incorporation of, via an ETF, the NASDAQ 100, Dow Jones or TLT. The final portion of this portfolio incorporates a long-short fixed income strategy, which integrates tactical asset allocation using quantitative analysis. This strategy is ultimately used to take advantage of the volatility associated with longer-dated U.S. Treasury securities. This portion of the portfolio can go long or short longer-dated treasury securities, as well as trade into cash, as it provides non-correlation to the equity market. The combination of these three separate strategies allow us to better engineer and mitigate the overall beta and volatility associated with this portfolio, as we try and provide above-average investment returns. The PWA Core Hedged Equity seeks to outperform the S&amp;P 500 Total Return Index.</p>
 												<h3>PWA Core Hedged Moderate Growth</h3>
-												<p>COMING SOON</p>
-												<h3>PWA Core Hedged Income and Growth</h3>
-												<p>COMING SOON</p>
+												<p>The PWA Core Hedged Equity is specifically designed for investors looking to acquire enhanced capital appreciation, while mitigating systematic and non-systematic risk through the incorporation of engineered beta. This portfolio is composed of four separate strategies running simultaneously. Each strategy looks to integrate three distinct disciplines of investment analysis which include; fundamental, technical, and quantitative while incorporating a different brand of asset allocation; tactical and strategic. The core portion of this multi-disciplined strategy utilizes a diversified set of mutual funds, which track U.S and International equities and fixed-income securities. These mutual funds are strategically allocated and rebalanced every quarter, using macroeconomics and fundamental analysis, in an effort to reduce systematic risk and seeks to keep an allocation of 60/40, equity to fixed income. The second portion of this strategy incorporates a diversified set of stocks that are traded monthly based on different momentum and volatility indicators. This is done in an effort to reduce both systematic and non-systematic risk as this portion of the portfolio strictly integrates specific sectors, industries or asset classes that display momentum and strong outperformance relative to the benchmark. To further protect the principal invested, this portion will go to a 50% cash allocation in the event that the market signals an upcoming bearish quarter. The third part of this portfolio incorporates a long-short equity strategy, which integrates tactical asset allocation using technical analysis. This strategy aims to add alpha to the overall portfolio, as well as provide a hedge through the incorporation of, via an ETF, the NASDAQ 100, Dow Jones or the 20-year Treasury bond ETF. The final portion of this portfolio incorporates a long-short fixed income strategy, which integrates tactical asset allocation using quantitative analysis. This strategy is ultimately used to take advantage of the volatility associated with longer-dated U.S. Treasury securities. This portion of the portfolio can go long or short longer-dated treasury securities, as well as trade into cash, as it provides non-correlation to the equity market. The combination of these three separate strategies allow us to better engineer and mitigate the overall beta and volatility associated with this portfolio, as we try and provide above-average investment returns. The PWA Core Hedged Moderate seeks to outperform a blended benchmark of 60% Standard &amp; Poor’s 500 Total Return Index ("S&amp;P 500®") &amp; 40% the Bloomberg Barclays U.S. Aggregate Bond Index on an annualized basis.</p>
+												<h3>PWA Core Hedged Income &amp; Growth</h3>
+												<p>The PWA Core Hedged Income &amp; Growth is specifically designed for investors looking to acquire capital appreciation, while mitigating systematic and non-systematic risk through the incorporation of engineered beta. This portfolio is composed of three separate strategies running simultaneously. Each strategy looks to integrate three distinct disciplines of investment analysis which include; fundamental, technical, and quantitative while incorporating a different brand of asset allocation; tactical and strategic. The core portion of this multi-disciplined strategy utilizes a diversified set of mutual funds, which track U.S and International equities and fixed-income securities. These mutual funds are strategically allocated and re-balanced every quarter, using macroeconomics and fundamental analysis, in an effort to reduce systematic risk and seeks to keep an allocation of 50/50, equity to fixed income. The second portion of this strategy incorporates a diversified set of low volatility stocks that are traded monthly based on different momentum and volatility indicators. This is done in an effort to reduce both systematic and non-systematic risk as this portion of the portfolio strictly integrates the 15 largest companies, by market cap, of the S&amp;P 500. To further protect the principal invested, this portion can use cash as an allocation in the event that none of the companies meet our investment criteria. The final portion of this portfolio incorporates a long-short fixed income strategy, which integrates tactical asset allocation using quantitative analysis. This strategy is ultimately used to take advantage of the volatility associated with longer-dated U.S. Treasury securities. This portion of the portfolio can go long or short longer-dated treasury securities, as well as trade into cash, as it provides non-correlation to the equity market. The combination of these three separate strategies allow us to better engineer and mitigate the overall beta and volatility associated with this portfolio, as we try and provide above-average investment returns. The PWA Core Hedged Equity seeks to outperform a blended benchmark of 50% Standard &amp; Poor's 500 Total Return Index ("S&amp;P 500®") &amp; 50% the Bloomberg Barclays U.S. Aggregate Bond Index on an annualized basis.</p>
 												<h3>PWA Core Hedged Conservative Growth</h3>
-												<p>COMING SOON</p>
+												<p>The PWA Core Hedged Conservative is specifically designed for investors looking to acquire capital appreciation, while mitigating systematic and non-systematic risk through the incorporation of engineered beta. This portfolio is composed of four separate strategies running simultaneously. Each strategy looks to integrate three distinct disciplines of investment analysis which include; fundamental, technical, and quantitative while incorporating a different brand of asset allocation; tactical and strategic. The core portion of this multi-disciplined strategy utilizes a diversified set of mutual funds, which track U.S and International equities and fixed-income securities. These mutual funds are strategically allocated and re-balanced every quarter, using macroeconomics and fundamental analysis, in an effort to reduce systematic risk and seeks to keep an allocation of 30/70, equity to fixed income. The second portion of this strategy incorporates a diversified set of low volatility stocks that are re-balanced monthly based on different momentum and volatility indicators. This is done in an effort to reduce both systematic and non-systematic risk as this portion of the portfolio strictly integrates the 15 largest companies, by market cap, of the S&amp;P 500. To further protect the principal invested, this portion can use cash as an allocation in the event that none of the companies meet our investment criteria.   The third portion of the portfolio is our Managed Dividend strategy.  The primary objective associated with this strategy is volatility reduction and income appreciation. This strategy aims to provide the overall model with above-average dividend yield and current yield, while suppressing the overall annual standard deviation of the portfolio. This is done through the inclusion of seven specific exchange trade funds, which aim to provide this strategy with diversification through a mixed asset allocation among fixed-income instruments and equity securities. The final portion of this portfolio incorporates a long-short fixed income strategy, which integrates tactical asset allocation using quantitative analysis. This strategy is ultimately used to take advantage of the volatility associated with longer-dated U.S. Treasury securities. This portion of the portfolio can go long or short longer-dated treasury securities, as well as trade into cash, as it provides non-correlation to the equity market. The combination of these three separate strategies allow us to better engineer and mitigate the overall beta and volatility associated with this portfolio, as we try and provide above-average investment returns. The PWA Core Hedged Conservative seeks to outperform a blended benchmark of 30% the Standard &amp; Poor’s 500 Total Return Index ("S&amp;P 500®") and 70% the Bloomberg Barclays U.S. Aggregate Bond Index on an annualized basis.</p>
 											</div>
 										</div>
 									</div>
@@ -1078,61 +1078,6 @@
 
 					<div class="col-md-4 side-lines">
 						<div class="media testimonial">
-							<a href="#" data-toggle="modal" data-target="#modal-pamela" class="hvr-float">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x "></i>
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Pamela Escobar</h3>
-								<blockquote>
-									<p>Pam serves as the primary point of contact for our retail clients, navigating them through all account inquiries.</p>
-									<footer>Client Associate</footer>
-								</blockquote>
-							</div>
-							</a>
-						</div>
-					</div>
-
-					<!-- Pamela Modal -->
-					<div class="modal fade" id="modal-pamela" tabindex="-1" role="dialog" aria-labelledby="modal-pamela-label" aria-hidden="true">
-						<div class="modal-dialog modal-lg">
-							<div class="modal-content">
-								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-									<h4 class="modal-title" id="modal-pamela-label">Pamela Escobar</h4>
-								</div>
-								<div class="modal-body">
-									<div class="row">
-										<div class="col-md-12">
-											<img src="images/pam.jpg" class="img-responsive img-rounded center-block portraits" alt="Preston Wealth Advisors" />
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-md-12">
-											<p class="disc-text">Pam joined Preston Wealth Advisors as the Client Associate for all Private Clients in July 2013.  In this capacity Pam serves as the primary point of contact for our retail clients, navigating them through
-											paperwork, daily requests/administration and all account inquiries.  Pam is responsible for cultivating new
-											relationships and maintaining existing ones. In addition to her role as Client Associate, Pam acts as the
-											Office Manager.<br><br>
-											Pam joins PWA with work experience that includes event marketing, wine industry sales and managerial
-											experience in the pharmaceutical industry.  These previous positions taught Pam the significance of
-											communicating precise and accurate information to clients as well as the importance of listening.<br><br>
-											A native of Virginia, Pam graduated from Stonewall Jackson High School in Manassas, Va., with an
-											International Baccalaureate degree and continued her collegiate studies at the University of Mary
-											Washington. In her free time, Pam enjoys traveling to exotic locations including Guatemala, Bora Bora and
-											spending time with her Boxer, Eve.  Pam is also fluent in Spanish.</p>
-										</div>
-									</div>
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Pamela Modal end -->
-
-					<div class="col-md-4 side-lines">
-						<div class="media testimonial">
 							<a href="#" data-toggle="modal" data-target="#modal-zach" class="hvr-float">
 							<div class="media-right">
 								<i class="fa fa-info-circle fa-5x "></i>
@@ -1175,6 +1120,7 @@
 						</div>
 					</div>
 					<!-- Zach Modal end -->
+
 				</div>
 
 <!-- ==================== row 3 ====================== -->
